# trilean

./: .travis.yml  Cargo.toml  README.md
src/libtrilean/: lib.rs  skleene.rs
